Adjust templates to include/exclude the right things for resources
* Include photo container so page layout doesn't look funny (resource photos coming in a future PR)
* Include progress bar and audit wells
* Exclude "nearby trees" (discussed with Deb; nearby resources are visible on the little map)
* Exclude comment message (the one about not serving as a way to report problems with a tree)

--- a/opentreemap/treemap/templates/treemap/partials/sidebar.html
+++ b/opentreemap/treemap/templates/treemap/partials/sidebar.html
@@ -31,6 +31,7 @@
   </ul>
   {% endfor %}
 </div>
+{% if feature.is_plot %}
 <div class="well">
   <h3>{% trans "Nearby Trees" %}</h3>
   {% with nearby=plot.nearby_plots %}
@@ -45,3 +46,4 @@
   {% endif %}
 </div>
 {% endwith %}
+{% endif %}
