Fix error revealed by unit tests

--- a/opentreemap/treemap/templates/treemap/partials/collection_udf_row.html
+++ b/opentreemap/treemap/templates/treemap/partials/collection_udf_row.html
@@ -6,6 +6,11 @@
    {% endif %}
    >
   {% for field in udf.datatype_dict %}
-  <td>{{ value.data|get:field.name }}</td>
+  <td>
+    {{ value.data|get:field.name }}
+    {% if forloop.last and udf.name == "Alerts" %}
+      <a>Resolve</a>
+    {% endif %}
+  </td>
   {% endfor %}
 </tr>
