Replace "roof polygon" message (fixes #54)

--- a/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_add_resource.html
@@ -29,7 +29,7 @@
         <div class="add-step">
             <div class="add-step-header">{% trans "Indicate Nearby Roof Area" %}</div>
             <div class="add-step-content">
-                <div class="alert alert-info">Drag and outline the nearby roof area that would drain into your {{ term.resource }}.</div>
+                <div class="alert alert-info">Move the dots on the blue polygon to define the borders of the roof area that will drain into your {{ term.resource }}.</div>
             </div>
             {% include 'treemap/partials/step_controls.html' %}
         </div>
