--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -82,7 +82,7 @@
     }
 
     .messages,
-    .text-error {
+    .text-danger {
         &:empty {
             display: none !important;
         }
