--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -48,8 +48,8 @@
       {% block topnav %}
       <!-- Top Nav -->
       <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <ul class="nav pull-left">
+        <div class="collapse navbar-collapse" id="otm-navbar-collapse">
+          <ul class="nav navbar-nav navbar-left">
             {# Since the active style changes on a page-by-page basis we use nested blocks below. These nested blocks can then be overriden to change which tab is active. #}
             {% block instancetopnav %}
             {% if last_instance %}
@@ -66,7 +66,7 @@
             {% endif %}
             {% endblock instancetopnav %}
           </ul>
-          <ul class="nav pull-right">
+          <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
               <li class="{% block activeuser %}{% endblock %}">
                 <a href="{% url 'profile' %}">{% trans "My Account" %}
@@ -157,7 +157,7 @@
 
     {% verbatim %}
     <script id="geocode-results-template" type="text/x-mustache-template">
-      <ul class="unstyled">
+      <ul class="list-unstyled">
         {{#candidates}}
         <li><a href="javascript:;" data-class="geocode-result" data-x="{{x}}" data-y="{{y}}" data-srid="{{srid}}" data-address"{{address}}">{{address}}</a></li>
         {{/candidates}}
