--- a/opentreemap/treemap/templates/registration/activation_complete.html
+++ b/opentreemap/treemap/templates/registration/activation_complete.html
@@ -10,7 +10,7 @@
     <h3>
       Want to request Beta access to the site and create your own tree map?
     </h3>
-    <a href="/beta/" class="btn btn-primary btn-large">Request Beta Access</a>
+    <a href="/beta/" class="btn btn-primary btn-lg">Request Beta Access</a>
     <hr>
     <h5>
       Just want to view an existing map?
