--- a/opentreemap/treemap/templates/treemap/field/div.html
+++ b/opentreemap/treemap/templates/treemap/field/div.html
@@ -12,7 +12,7 @@
             {% include "treemap/field/inputs.html" %}
             {% endblock inputs %}
         </div>
-        <div class="alert alert-error text-error"
+        <div class="alert alert-danger text-danger"
             style="display: none;"
             {% include "treemap/field/attrs.html" with class="error" %}></div>
     {% endif %}
