--- a/opentreemap/treemap/templates/treemap/field/species_div.html
+++ b/opentreemap/treemap/templates/treemap/field/species_div.html
@@ -14,7 +14,7 @@
     <div>
       {% include "treemap/field/species_typeahead.html" %}
     </div>
-    <div class="alert alert-error text-error"
+    <div class="alert alert-danger text-danger"
         style="display: none;"
         {% include "treemap/field/attrs.html" with class="error"%}></div>
   </div>
