--- a/opentreemap/treemap/templates/treemap/field/species_tr.html
+++ b/opentreemap/treemap/templates/treemap/field/species_tr.html
@@ -20,7 +20,7 @@
     <td>
       {% include "treemap/field/species_typeahead.html" %}
     </td>
-    <td class="text-error"
+    <td class="text-danger"
         style="display: none;"
         {% include "treemap/field/attrs.html" with class="error"%}></td>
   </tr>
