--- a/opentreemap/treemap/templates/treemap/field/td.html
+++ b/opentreemap/treemap/templates/treemap/field/td.html
@@ -5,6 +5,6 @@
   <div {% include "treemap/field/attrs.html" with class="edit" %} style="display: none;">
     {% include "treemap/field/inputs.html" %}
   </div>
-  <div class="text-error" style="display: none;"
+  <div class="text-danger" style="display: none;"
           {% include "treemap/field/attrs.html" with class="error" %}></div>
 </td>
