--- a/opentreemap/treemap/templates/treemap/partials/photo_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_carousel.html
@@ -29,5 +29,5 @@
 <a class="carousel-control right" href="#photo-carousel" data-slide="next"><i class="icon-right-circled"></i></a>
 {% endif %}
 {% if error %}
-<div class="text-error">{{ error }}</div>
+<div class="text-danger">{{ error }}</div>
 {% endif %}
