--- a/opentreemap/treemap/templates/treemap/partials/search_bar.html
+++ b/opentreemap/treemap/templates/treemap/partials/search_bar.html
@@ -2,7 +2,7 @@
 
 <div class="search-block-wrapper">
   <!--Species Search-->
-  <div class="search-block visible-desktop">
+  <div class="search-block visible-md">
     <h3>{% trans "Search by Species" %}</h3>
     <div class="search-field-group">
       <a class="typeahead-toggle" id="species-toggle"><i class="icon-menu"></i></a>
