--- a/opentreemap/treemap/templates/treemap/partials/upload_image.html
+++ b/opentreemap/treemap/templates/treemap/partials/upload_image.html
@@ -6,7 +6,7 @@
   <div class="modal-body">
     <input class="fileChooser" type="file" name="file" data-url="{{ upload_photo_endpoint }}" accept="image/*">
     <div class="progress">
-      <div class="bar-info" style="width: 0%; height: 100%"></div>
+      <div class="progress-bar-info" style="width: 0%; height: 100%"></div>
     </div>
   </div>
   <div class="modal-footer">
