--- a/opentreemap/treemap/templates/registration/login.html
+++ b/opentreemap/treemap/templates/registration/login.html
@@ -11,7 +11,7 @@
             {% csrf_token %}
             <legend>{% trans "Login" %}<a class="pull-right have-account" href="{% url 'registration_register' %}">{% trans "Need an account?" %}</a></legend>
             {{ form.as_p }}
-            <button type="submit" value="{% trans 'Log in' %}" class="btn btn-large btn-primary">{% trans 'Log in' %}</button>
+            <button type="submit" value="{% trans 'Log in' %}" class="btn btn-lg btn-primary">{% trans 'Log in' %}</button>
             <input type="hidden" name="next" value="{{ next }}" />
         </fieldset>
     </form>
@@ -35,7 +35,7 @@
         $('input[type="text"]').addClass('input-xlarge');
         $('input[type="password"]').addClass('input-xlarge');
         $('input[name="username"]').focus();
-        $('ul.errorlist').addClass('alert alert-error');
+        $('ul.errorlist').addClass('alert alert-danger');
     })
 })(require);
 </script>
