--- a/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
+++ b/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
@@ -11,23 +11,23 @@
   <tbody id="diameter-worksheet">
     <tr id="trunk-row">
       <td>
-        <div class="input-append">
+        <div class="input-group">
           <input class="input-small"
                  data-class="diameter-input"
                  type="text"
                  data-value="{{ field.value|unlocalize }}"
                  data-digits="{{ field.digits }}"
                   />
-          <span class="add-on" {{ unit_extra|default:"" }}>{{ field.units }}</span>
+          <span class="input-group-addon" {{ unit_extra|default:"" }}>{{ field.units }}</span>
         </div>
       </td>
       <td>
-        <div class="input-append">
+        <div class="input-group">
           <input class="input-small"
                  data-class="circumference-input"
                  type="text"
                   />
-          <span class="add-on" {{ unit_extra|default:"" }}>{{ field.units }}</span>
+          <span class="input-group-addon" {{ unit_extra|default:"" }}>{{ field.units }}</span>
         </div>
       </td>
     </tr>
