--- a/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
+++ b/opentreemap/treemap/templates/treemap/partials/eco_benefits.html
@@ -2,7 +2,7 @@
 {% load l10n %}
 
 {% if request.instance_supports_ecobenefits %}
-<div {% if not hidecounts %}id="benefit-values"{% endif %} class="benefit-values accordion-inner">
+<div {% if not hidecounts %}id="benefit-values"{% endif %} class="benefit-values panel-inner">
     {% with plot_benefits=benefits.plot %}
       {% include "treemap/partials/benefit_value_row.html" with benefit=plot_benefits.totals %}
       {% if not hide_summary and plot_benefits %}
