--- a/opentreemap/treemap/templates/treemap/partials/map_feature_popup.html
+++ b/opentreemap/treemap/templates/treemap/partials/map_feature_popup.html
@@ -11,14 +11,14 @@
   </div>
   <div>
     <a href="{% url 'map_feature_detail' instance_url_name=request.instance.url_name feature_id=feature.pk %}"
-       class="btn btn-small btn-secondary">{% trans "View All Details" %}</a>
+       class="btn btn-sm btn-secondary">{% trans "View All Details" %}</a>
 
     {% if feature.is_plot %}
     <a disabled="disabled"
        data-always-enable="{{ last_effective_instance_user|plot_is_writable }}"
        data-disabled-title="{% trans "Editing a tree's details is not available to all users" %}"
        data-href="{% url 'map_feature_detail_edit' instance_url_name=request.instance.url_name feature_id=feature.pk edit='edit' %}"
-       class="btn btn-small btn-info">{% trans "Edit Details" %}</a>
+       class="btn btn-sm btn-info">{% trans "Edit Details" %}</a>
     {% endif %}
   </div>
 </div>
