--- a/opentreemap/treemap/templates/treemap/staticpage.html
+++ b/opentreemap/treemap/templates/treemap/staticpage.html
@@ -8,8 +8,8 @@
 {% block content %}
 <div class="image-background"></div>
 <div class="container contained static-page">
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-md-12">
           {{ content|safe }}
         </div>
     </div>
