Change ecobenefit labels
* Change title in header from "Yearly Eco Benefits" to "Eco Benefits"
* "Total Benefits" should be renamed "Total Annual Benefits." Move it above the General Eco Benefits Header. This number is all the annual benefits generated by both trees and watershed solutions. It's everything but carbon dioxide stored to date.
* Rename "General Eco Benefits" to "Tree Benefits."
* Get rid of the word "Benefits" that's used for each individual benefit header. Change to desired wording and order.

--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -50,7 +50,7 @@
   {% if request.instance_supports_ecobenefits %}
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#yearlyEco">{% trans "Yearly Eco Benefits" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#yearlyEco">{% trans "Eco Benefits" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
     </div>
     <div id="yearlyEco" class="accordion-body collapse in">
       <div class="accordion-inner benefit-values" id="benefit-values"></div>
