--- a/opentreemap/treemap/templates/treemap/partials/collectionudf.html
+++ b/opentreemap/treemap/templates/treemap/partials/collectionudf.html
@@ -4,7 +4,7 @@
 {% load instance_config %}
 
 {% with perm_level=last_effective_instance_user|udf_write_level:udf %}
-{% if perm_level == "read" or perm_level == "write" %}
+{% if perm_level|is_read_or_write %}
 <div>
   <h4>{{ udf.model_type|display_name }} {{ udf.name }}</h4>
   <table class="table table-hover"
