Show ecobenefit rows with `currency` but no `value`
So "Totals" row will show, but empty rows will not

--- a/opentreemap/treemap/templates/treemap/partials/benefit_value_row.html
+++ b/opentreemap/treemap/templates/treemap/partials/benefit_value_row.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load l10n %}
 
-{% if benefit.value %}
+{% if benefit.value or benefit.currency > 0 %}
 <div class="benefit-value-row">
   {% if icon %}
   <div class="benefit-icon"><i class="icon-{{ icon }}"></i></div>
