--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -17,6 +17,9 @@ $main-text-color                : #231f20; // Black text color
 $subtext-color                  : #799397; // Midtone gray text color
 $light-gray-color               : #f1f2f2; // Light gray color
 
+// Background Image
+$background-image               : url('/static/img/default-background.jpg') !default; // Standard tree background
+
 // Media Queries
 $screen-xs			 : "(max-width: 767px)";
 $screen-gtxs         : "(min-width: 768px)";
