--- a/opentreemap/treemap/templates/treemap/partials/step_set_location.html
+++ b/opentreemap/treemap/templates/treemap/partials/step_set_location.html
@@ -8,8 +8,8 @@
             <button class="btn btn-primary geocode">{% trans "Search" %}</button>
         </form>
         <a class="geolocate"><i class="icon-direction"></i> {% trans "Use Current Location" %}</a>
-        <div class="alert alert-info place-marker-message">{% trans 'Choose a point on the map, enter an address, or select "Use Current Location."' %}</div>
-        <div class="alert alert-error text-error geocode-error" style="display: none;">{% trans "Unable to locate this address" %}</div>
+        <div class="alert alert-info place-marker-message">{% trans 'Choose a point on the map, enter an address including city, or select "Use Current Location."' %}</div>
+        <div class="alert alert-error text-error geocode-error" style="display: none;">{% trans "Unable to locate this address. You may need to include a city and state." %}</div>
         <div class="alert alert-error text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
         <div class="alert alert-info move-marker-message" style="display: none;">{% trans "Please move marker to exact location of the" %} {{ feature_name }}</div>
     </div>
